# DAPP

./: README.md  app.py  data.py  pyproject.toml  requirements.txt
cache/: cache_db_0.11.db  cache_db_0.11.db.wal
data/: online_retail_sales.csv
